--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:postgresql://database-2.cuvv0osxzgmi.eu-west-3.rds.amazonaws.com:5432/andy-track-shared?currentSchema=order_project
+spring.datasource.username=student
+spring.datasource.password=spidermanismyhero
+spring.flyway.baselineOnMigrate = true
+#server.error.include-message=always
